--- a/assets/style.css
+++ b/assets/style.css
@@ -29,7 +29,7 @@
     outline: none;
 }
 #search-results {
-    position: absolute;
+    position: relative;
     z-index: 10;
     margin: 1px auto;
     background: #1ca0b8;
@@ -37,7 +37,6 @@
     text-align: left;
     border-radius: 4px;
     border: 2px solid #1ca0b8;
-    display: none;
 }
 .search-item {
     color: white;
