--- a/assets/style.css
+++ b/assets/style.css
@@ -32,7 +32,7 @@
     position: relative;
     z-index: 10;
     margin: 1px auto;
-    background: #1ca0b8;
+    background: #404849;
     width: 90%;
     text-align: left;
     border-radius: 4px;
