--- a/assets/style.css
+++ b/assets/style.css
@@ -1,42 +1,92 @@
+
+body {
+    background-color: rgb(2, 126, 193);
+}
+/* outer container */
+.topnav {
+    background-color: rgb(25, 63, 112);
+    margin: 5px;
+    width: 94vw;
+    height: 92vh;
+    border-radius: 3px;
+    box-shadow: 9px 9px 5px rgba(36, 48, 111, 0.414);
+}
 .container-out {
     font-family: "Fira Sans", sans-serif;
-    padding: 15px 0;
 }
 .container-in {
-    width: 95%;
+    width: 100%;
     margin: 0 auto;
 }
-.search-container {
-    position: relative;
-    max-width: 300px;
-    margin: 0 auto;
-    text-align: center;
-    padding: 15px;
-}
+/* top bar */
 .search-title {
-    margin-top: 0;
-    margin-bottom: 5px;
-    color: #1ca0b8;
+    display: flex;
+    padding: 5px;
+    margin: 10px;
+    color: #ffffff;
+    background-color: #44beff;
+    width: 40vw;
+    border-radius: 5px;
 }
+/* search bar */
 #search-input {
-    width: 90%;
-    padding: 13px;
-    border-radius: 4px;
+    width: 50%;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    margin-left: 7px;
+    border-radius: 20px;
     border: 2px solid #1ca0b8;
     font-size: 15px;
+    background-color: rgb(246, 236, 176);
+}
+/* buttons */
+#submit-button, #books {
+    justify-content: center;
+    background-color: rgb(0, 160, 200);
+    color: #d3fbff;
+    padding: 5px;
+    margin: 3px;
+    border-radius: 6px;
+    border: 0px;
+
 }
 #search-input:focus {
     outline: none;
 }
+
+/* left page */
+.search-container {
+    background: linear-gradient(90deg, rgb(255, 227, 117) 0%, rgb(255, 237, 179) 90%, rgb(255, 242, 157) 100%); 
+    float: left;
+    margin-left: 2vw;
+    border-top-right-radius: 50px 20px;
+    border-top-left-radius: 800px 10px;
+    width: 45vw;
+    height: 90vh;
+    box-shadow: -2px 2px 0px 2px rgb(223, 199, 104),
+    -4px 4px 0px 4px rgb(172, 154, 80),
+    9px 9px 9px rgb(51, 2, 2);
+}
+/* right page */
 #search-results {
-    position: relative;
-    z-index: 10;
-    margin: 1px auto;
-    background: #404849;
-    width: 90%;
-    text-align: left;
-    border-radius: 4px;
-    border: 2px solid #1ca0b8;
+    background: linear-gradient(90deg, rgb(255, 227, 117) 0%, rgb(255, 237, 179) 10%, rgb(255, 242, 157) 100%);
+    float: right;
+    margin-right: 2vw;
+    border-top-left-radius: 50px 20px;
+    border-top-right-radius: 800px 10px;
+    padding-top: 5px;
+    padding-left: 3vw;
+    width: 42svw;
+    height: 89.5vh;
+    box-shadow: 2px 2px 0px 2px rgb(223, 199, 104),
+    4px 4px 0px 4px rgb(172, 154, 80),
+    9px 9px 9px rgb(51, 2, 2);
+
+}
+/* search results formatting */
+#search-results, h1 {
+    font-size: 12px;
+    color: #1d1c2a;
 }
 .search-item {
     color: white;
@@ -56,5 +106,5 @@
 #search-data p {
     margin: 0;
     padding: 6px;
-    font-size: 16px;
+    font-size: 1px;
 }
