--- a/assets/style.css
+++ b/assets/style.css
@@ -70,6 +70,19 @@ button, #submit-button, #books, #local-storage, #clear-storage, #savelist, #NYT-
     background-color: #d3fbff;
     color: #556af0;
 }
+#modal {
+    display: none;
+    position: fixed;
+    text-align: center;
+    padding-top: 40vh;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0,0,0,0.4);
+}
 /* left page */
 .search-container {
     background: linear-gradient(90deg, rgb(255, 227, 117) 0%, rgb(255, 237, 179) 90%, rgb(255, 242, 157) 100%); 
